[DX-1083]: updated README.md with Command Library information (#12785)